# magql-sqlalchemy

./: .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yaml
docs/: api.md  check_delete.md  conf.py  filters.md  index.md  model.md  q-check_delete.md  q-search.md  search.md  start.md
requirements/: dev.txt  types.txt  typing.txt
src/magql_sqlalchemy/: __init__.py  check_delete.py  group.py  manager.py  pagination.py  resolvers.py  search.py  validators.py
tests/: conftest.py  test_api.py  test_check_delete.py  test_get_field_node.py  test_group.py  test_manager.py  test_search.py
